[metadata]
name = ceilometer-zvm
version = 2015.2
summary = Ceilometer zvm specific implementation of virt inspector
description-file = README.rst
author = IBM
home-page =
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    ceilometer_zvm

[entry_points]
ceilometer.compute.virt =
    zvm = ceilometer_zvm.compute.virt.zvm.inspector:ZVMInspector

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = ceilometer_zvm/locale
domain = ceilometer-zvm

[update_catalog]
domain = ceilometer-zvm
output_dir = ceilometer_zvm/locale
input_file = ceilometer_zvm/locale/ceilometer-zvm.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = ceilometer_zvm/locale/ceilometer-zvm.pot
